<resources>
    <string name="app_name">Trello Clone</string>
    <string name="open">Open Navigation drawer</string>
    <string name="close">Close Navigation drawer</string>

    <string name="board_members">Members</string>
    <string name="invite_members">Invite Members</string>
    <string name="set_star">Star Board</string>
    <string name="remove_star">Remove from Starred Boards</string>
    <string name="about_board">About</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="web_client_id">836229581118-d1dqqgdi843i9jiguru0irsnubicssot.apps.googleusercontent.com</string>
    <string name="creates_new_boards">Creates New Boards</string>
    <string name="name">Name</string>
    <string name="creates_new_lists">Creates New Lists</string>

    <string name="description_hint">Description for your board.</string>
    <string name="board_creator">Created By :</string>
    <string name="board_description">Description :</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="new_user_register_now">New User? &#160;<b>Register now</b> </string>
</resources>