<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/about_app"
            android:title="@string/about_board"
            android:icon="@drawable/ic_outline_info_24"/>

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/members"
            android:icon="@drawable/ic_round_person_24"
            android:title="@string/board_members" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/invite_members"
            android:title="@string/invite_members"
            android:icon="@drawable/ic_round_person_add_24"/>

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/star_board"
            android:title="@string/set_star"
            android:icon="@drawable/ic_round_star_outline_24"/>

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_member"
        android:visible="false">

        <item
            android:id="@+id/members_add"
            android:title="@string/board_members">

            <menu>

            </menu>

        </item>
    </group>

</menu>